--- a/gradle.properties
+++ b/gradle.properties
@@ -5,13 +5,14 @@ org.gradle.jvmargs=-Xmx1G
 # check these on https://fabricmc.net/versions.html
 
 #minecraft_version=1.21.10
-minecraft_version=1.21.10
-yarn_mappings=1.21.10+build.1
+minecraft_version=1.21.4
+yarn_mappings=1.21.4+build.1
 loader_version=0.16.9
 
 # Fabric API
+# fabric version must match the mc version -> https://modrinth.com/mod/fabric-api/versions?g=1.21.4
 #fabric_version=0.110.5+1.21.4
-fabric_version=0.138.3+1.21.10
+fabric_version=0.119.4+1.21.4
 # Mod Properties
 mod_version = 1.2.5
 maven_group = freelook
